--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -4,6 +4,11 @@
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+body {
+	margin: 0;
+	background-color: $clr-light-gray;
+}
+
 .App {
 	position: fixed;
 	top: 0;
@@ -12,69 +17,259 @@
 	right: 0;
 
 	display: flex;
-
-	background-color: $clr-light-gray;
+	flex-direction: column-reverse;
+	@media screen and (min-width: $screen-lg) {
+		flex-direction: row;
+	}
 }
 
-.side-navigation {
-	flex: 0 0 20rem;
-}
+$nav-breakpoint: $screen-lg;
+.navigation {
+	flex: 0 0 5rem;
 
-.side-navigation-item {
+	padding: 0.5rem 0 0 0;
 	display: flex;
-	gap: 0.5rem;
-	height: 5rem;
-	margin: 0.5rem 0;
+	justify-content: space-around;
+	gap: 2rem;
+
+	border-top: 1px solid $clr-dark-gray;
+
+	@media screen and (min-width: $nav-breakpoint) {
+		padding: 4rem 0 0 0;
+		flex: 0 0 20rem;
+		flex-direction: column;
+		justify-content: flex-start;
+
+		border-top: 0;
+		border: none;
+	}
+}
+
+.navigation-item {
+	flex: 0 0 5rem;
+	display: flex;
 
 	text-decoration: none;
 
 	&-icon {
-		flex: 0 0 6rem;
-		display: flex;
-		align-items: center;
-		justify-content: flex-end;
-		padding: 0 2rem 0 0;
-
-		border-radius: 0 4rem 4rem 0;
-		background-color: transparent;
-		color: $clr-dark-gray;
-		font-size: 1.5rem;
-	}
-
-	&-text {
 		flex: 1 1 auto;
 		display: flex;
 		align-items: center;
+		justify-content: center;
 
-		span {
-			font-size: 1.25rem;
-			color: $clr-dark-gray;
+		font-size: 1.5rem;
+		color: $clr-dark-gray;
+		border-radius: 4rem 4rem 0 0;
+		background-color: transparent;
+
+		@media screen and (min-width: $nav-breakpoint) {
+			padding: 0 2rem 0 0;
+			flex: 0 1 30%;
+			justify-content: flex-end;
+
+			border-radius: 0 4rem 4rem 0;
 		}
 	}
 
-	&:hover {
+	span {
+		display: none;
+		flex: 1 1 auto;
+		align-items: center;
+		padding: 0 0 0 2rem;
+
+		font-size: 1.25rem;
+	}
+
+	@media screen and (min-width: $nav-breakpoint) {
 		span {
-			color: $clr-dark-blue;
+			display: flex;
 		}
 	}
 
 	&:focus {
-		outline: none;
-
-		span {
-			text-decoration: underline;
-			text-underline-offset: 2px;
-		}
+		outline: 2px solid $clr-dark-blue;
 	}
 
 	&.active {
-		.side-navigation-item-icon {
-			background: linear-gradient(to right, $clr-light-blue 50%, $clr-dark-blue);
+		.navigation-item-icon {
+			background-color: $clr-dark-blue;
 			color: white;
 		}
+	}
+}
 
-		span {
+.main-section {
+	flex: 1 1 auto;
+
+	overflow: auto;
+}
+
+.categories {
+	display: flex;
+	gap: 1rem;
+	padding: 0.5rem;
+
+	overflow: auto;
+
+	&-item {
+		padding: 0.25rem 0.75rem;
+
+		font-size: 1rem;
+		font-weight: 500;
+		text-decoration: none;
+		background-color: $clr-dark-gray;
+		color: white;
+		border: none;
+		border-radius: 0.25rem;
+		white-space: nowrap;
+		cursor: pointer;
+
+		&:focus {
+			outline: 2px solid $clr-dark-blue;
+			outline-offset: 2px;
+		}
+
+		&.active {
+			background-color: $clr-dark-blue;
+		}
+	}
+}
+
+.movies {
+	.load-more {
+		display: flex;
+		justify-content: center;
+		padding: 2rem 0;
+
+		button {
+			padding: 0.75em 1.5em;
+
+			font-size: 1rem;
+			font-weight: 500;
+			color: $clr-off-black;
+			border: 0.25rem solid white;
+			border-radius: 1rem;
+			background-color: $clr-light-gray;
+			box-shadow: $box-shadow;
+		}
+	}
+}
+
+.movies-grid {
+	padding: 0.5rem;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+	gap: 2rem;
+
+	@media screen and (min-width: $nav-breakpoint) {
+		gap: 4rem;
+	}
+}
+
+.movie-item {
+	display: block;
+
+	text-decoration: none;
+
+	img {
+		width: 100%;
+
+		border-radius: 1rem;
+		box-shadow: $box-shadow;
+	}
+
+	h4 {
+		margin: 1em 0 1.25em 0;
+
+		font-size: 1rem;
+		font-weight: 500;
+		color: $clr-off-black;
+	}
+
+	&:hover,
+	&:focus,
+	&:active {
+		h4 {
 			color: $clr-dark-blue;
+		}
+	}
+}
+
+.movie-details {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 1rem;
+
+	background-color: rgba(#000000, 0.9);
+
+	&-inner {
+		position: relative;
+		flex: 1;
+		max-width: $screen-md;
+		max-height: 90%;
+		padding: 1rem;
+		overflow: auto;
+
+		border-radius: 1rem;
+		background-color: $clr-light-gray;
+		color: $clr-off-black;
+
+		h2 {
+			margin: 0.5em 0;
+
+			font-size: 1.25rem;
+			font-weight: 600;
+		}
+
+		.info {
+			display: flex;
+
+			span {
+				margin: 0 0.5rem 0 0;
+
+				font-weight: 500;
+
+				svg {
+					color: $clr-dark-gray;
+				}
+			}
+		}
+
+		p {
+			margin: 1em 0;
+
+			line-height: 1.5em;
+		}
+
+		.details-toolbar {
+			display: flex;
+			justify-content: flex-end;
+
+			button {
+				padding: 0.5rem 1rem;
+
+				border: none;
+				border-radius: 0.5rem;
+				background-color: transparent;
+				color: $clr-off-black;
+				cursor: pointer;
+
+				&:hover {
+					background-color: $clr-dark-gray;
+					color: white;
+				}
+
+				&:focus {
+					outline: 2px solid $clr-dark-gray;
+					outline-offset: 2px;
+				}
+			}
 		}
 	}
 }
